--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0"
   }
